[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Polkadot Relay-chain Client Node"
edition     = "2021"
name        = "polkadot-cli"
version     = "0.9.19"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap      = { version = "3.1", features = ["derive"], optional = true }
futures   = "0.3.21"
log       = "0.4.16"
pyro      = { package = "pyroscope", version = "0.3.1", optional = true }
thiserror = "1.0.30"

polkadot-client           = { path = "../node/client", optional = true }
polkadot-node-core-pvf    = { path = "../node/core/pvf", optional = true }
polkadot-performance-test = { path = "../node/test/performance-test", optional = true }
service                   = { package = "polkadot-service", path = "../node/service", default-features = false, optional = true }

frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.19" }
polkadot-node-metrics  = { path = "../node/metrics" }
sc-cli                 = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.19" }
sc-service             = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.19" }
sc-tracing             = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.19" }
sp-core                = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
try-runtime-cli        = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.19" }

# this crate is used only to enable `trie-memory-tracker` feature
# see https://github.com/paritytech/substrate/pull/6745
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.19" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }

[features]
cli                 = [
  "clap",
  "sc-cli",
  "sc-service",
  "sc-tracing",
  "frame-benchmarking-cli",
  "try-runtime-cli",
  "polkadot-client",
  "polkadot-node-core-pvf",
  "polkadot-performance-test",
]
db                  = ["service/db"]
default             = [
  "wasmtime",
  "db",
  "cli",
  "full-node",
  "trie-memory-tracker",
  "polkadot-native",
]
fast-runtime        = ["service/fast-runtime"]
full-node           = ["service/full-node"]
pyroscope           = ["pyro"]
runtime-benchmarks  = [
  "service/runtime-benchmarks",
  "polkadot-node-metrics/runtime-benchmarks",
]
trie-memory-tracker = ["sp-trie/memory-tracker"]
try-runtime         = ["service/try-runtime"]
wasmtime            = ["sc-cli/wasmtime"]

# Configure the native runtimes to use. Polkadot is enabled by default.
#
# Validators require the native runtime currently
kusama-native   = ["service/kusama-native"]
polkadot-native = ["service/polkadot-native"]
rococo-native   = ["service/rococo-native"]
westend-native  = ["service/westend-native"]

malus           = ["full-node", "service/malus"]
runtime-metrics = [
  "service/runtime-metrics",
  "polkadot-node-metrics/runtime-metrics",
]
